<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appadoskotlin2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/navigation_home_to_navigation_item_home"
            app:destination="@id/navigation_item_home"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_item_home"
        android:name="com.example.appadoskotlin2.ui.home.ItemServiceFragment"
        android:label="Servicios"
        tools:layout="@layout/item_list">
        <argument
            android:name="item"
            app:argType="com.example.appadoskotlin2.data.RoomResponse"/>

    </fragment>
    <fragment
        android:id="@+id/nav_contract"
        android:name="com.example.appadoskotlin2.ui.contract.ContractFragment"
        android:label="@string/menu_contract"
        tools:layout="@layout/fragment_contract">
    <action
        android:id="@+id/navigation_contract_to_navigation_item_contract"
        app:destination="@id/navigation_item_contract">
        <argument
            android:name="item"
            app:argType="com.example.appadoskotlin2.data.ServiceItemResponse"/>
    </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_item_contract"
        android:name="com.example.appadoskotlin2.ui.home.ItemServiceFragment"
        android:label="Servicios"
        tools:layout="@layout/item_list">
    </fragment>

    <fragment
        android:id="@+id/nav_publish"
        android:name="com.example.appadoskotlin2.ui.publish.PublishFragment"
        android:label="@string/menu_publish"
        tools:layout="@layout/fragment_publish">
        <action
            android:id="@+id/navigation_publish_to_navigation_item_publish"
            app:destination="@id/navigation_item_publish"/>
        <action
            android:id="@+id/navigation_publish_to_navigation_diolog"
            app:destination="@id/navigation_diolog_publish"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_diolog_publish"
        android:name="com.example.appadoskotlin2.ui.diologs.PublishDiolog"
        android:label="Servicios"
        tools:layout="@layout/dialog_publish">
    </fragment>
        <fragment
            android:id="@+id/navigation_item_publish"
            android:name="com.example.appadoskotlin2.ui.publish.ItemPublishFragment"
            android:label="Servicios"
            tools:layout="@layout/item_list">
        </fragment>
    <fragment
        android:id="@+id/nav_close"
        android:name="com.example.appadoskotlin2.LoginActivity"
        android:label="Login"
        tools:layout="@layout/fragment_login"
        ></fragment>
  </navigation>